--- a/entrada.html
+++ b/entrada.html
@@ -1,29 +1,113 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Videojuegos</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <meta name="keywords" content="Videojuegos, Juegos, Call of Duty, Fortnite, Minecraft Grand Theft Auto, Sea of Thieves, Nintendo, Nintendo Life">
+    <meta name="description"
+        content="Descubre el fascinante mundo de los videojuegos con noticias, guías, críticas y más sobre juegos de acción, aventura, rol, estrategia, deportes y más.">
+    <meta name="keywords"
+        content="videojuegos, juegos de acción, juegos de aventura, juegos de rol, juegos de estrategia, juegos de deportes, juegos de disparos, juegos de simulación, juegos de carreras, juegos de terror, juegos multijugador, juegos online, juegos de mundo abierto, juegos indie, consolas de videojuegos, PlayStation, Xbox, Nintendo Switch, PC gaming, realidad virtual, eSports, gamers, desarrollo de videojuegos, gráficos de videojuegos, historia de los videojuegos, industria de los videojuegos, críticas de videojuegos, trucos y guías de juegos, actualizaciones de videojuegos, remakes y remasterizaciones, juegos retro, juegos de mesa digitales, juegos de cartas digitales, juegos de plataformas, juegos de puzzles, juegos de construcción, juegos educativos, juegos de música y ritmo, juegos de supervivencia, juegos de sandbox, modding de videojuegos, comunidad gamer, streaming de videojuegos, influencers de videojuegos, torneos de videojuegos, noticias de videojuegos, lanzamientos de videojuegos, soundtracks de videojuegos, diseño de niveles, inteligencia artificial en videojuegos">
+    <title>Blog de Videojuegos</title>
+    <link rel="stylesheet" href="./CSS/entrada.css">
 </head>
-<body>
-    <article>
-        <h2>Videojuegos</h2>
-        <p>Los videojuegos han evolucionado mucho en los últimos años. Ahora tenemos juegos más realistas, divertidos y variados que antes. Algunos de los videojuegos más populares de este momento son:</p>
-        <ul>
-            <li>Call of duty</li>
-            <li>Fortnite</li>
-            <li>Minecraft</li>
-            <li>Grand Theft Auto</li>
-            <li>Sea of Thieves</li>
-        </ul>
-        <p>Es importante recordar que los videojuegos pueden ser una herramienta educativa, ya que pueden ayudar a los niños a desarrollar habilidades sociales y cognitivas. Además, los videojuegos pueden ser una forma de pasar tiempo libre y relajarse.</p>
-        <p>Si te gustan los videojuegos, te recomendaría que visites la página de <a href="https://www.nintendolife.com/">Nintendo Life</a> que es una de las mejores páginas de noticias de videojuegos.</p>
-    </article>
-    <footer>
-        <p>Este artículo fue escrito por <a href="https://github.com/Romina-S">Romina</a></p>
-    </footer>
-</body>
-</html>
 
+<body>
+
+    <header>
+        <h1>Descubre el Fascinante Mundo de los Videojuegos</h1>
+    </header>
+
+    <div class="container">
+        <p>Bienvenidos a nuestro blog dedicado al apasionante mundo de los <strong>videojuegos</strong>. Aquí
+            encontrarás todo lo relacionado con <strong>juegos de acción</strong>, <strong>juegos de aventura</strong>,
+            <strong>juegos de rol (RPG)</strong>, y mucho más. Si eres un entusiasta de los <strong>juegos de
+                estrategia</strong> o prefieres la adrenalina de los <strong>juegos de disparos (FPS)</strong>, este es
+            tu lugar.
+        </p>
+
+        <h2>Las Mejores Consolas de Videojuegos</h2>
+        <p>En nuestra sección de <strong>consolas de videojuegos</strong>, exploramos las últimas novedades de
+            <strong>PlayStation</strong>, <strong>Xbox</strong> y <strong>Nintendo Switch</strong>. También te ofrecemos
+            guías para <strong>PC gaming</strong>, incluyendo recomendaciones sobre hardware y periféricos para mejorar
+            tu experiencia de juego.
+        </p>
+        <img src="./images/las-mejores-consolas-de-videojuegos.jpeg" alt="Consolas de videojuegos">
+
+        <h2>Realidad Virtual y Nuevas Tecnologías</h2>
+        <p>La <strong>realidad virtual (VR)</strong> está revolucionando la forma en que jugamos. En nuestros artículos,
+            te mantendremos al día con las últimas tendencias y lanzamientos en el mundo de los <strong>juegos
+                VR</strong>. Descubre cómo la <strong>inteligencia artificial en videojuegos</strong> está transformando
+            la industria y creando experiencias más inmersivas.</p>
+        <img src="./images/realidad-virtual-y-nuevas-tecnologías.jpg" alt="Realidad Virtual">
+
+        <h2>Comunidad Gamer y eSports</h2>
+        <p>La <strong>comunidad gamer</strong> es un componente vital del mundo de los videojuegos. Aquí podrás leer
+            sobre los principales <strong>torneos de videojuegos</strong> y el crecimiento de los
+            <strong>eSports</strong>. Entérate de las últimas noticias y eventos en el mundo competitivo, y conoce a los
+            <strong>influencers de videojuegos</strong> que están marcando tendencia.
+        </p>
+        <img src="./images/esports.jpeg" alt="eSports">
+
+        <h2>Desarrollos y Noticias de Videojuegos</h2>
+        <p>Nuestro equipo de expertos te mantendrá informado sobre las últimas <strong>noticias de videojuegos</strong>
+            y <strong>lanzamientos de videojuegos</strong>. También analizamos las <strong>actualizaciones de
+                videojuegos</strong>, así como los <strong>remakes y remasterizaciones</strong> que están causando
+            sensación.</p>
+        <img src="./images/noticias.jpeg" alt="Noticias de videojuegos">
+
+        <h2>Guías, Trucos y Críticas de Videojuegos</h2>
+        <p>No te pierdas nuestras <strong>críticas de videojuegos</strong>, donde evaluamos los títulos más esperados y
+            los clásicos que debes jugar. Además, ofrecemos <strong>trucos y guías de juegos</strong> para ayudarte a
+            superar los desafíos más difíciles y sacar el máximo provecho de tus partidas.</p>
+        <img src="./images/guia.jpeg" alt="Guías y Trucos de videojuegos">
+
+        <h2>Juegos Indie y Retro</h2>
+        <p>Si eres fan de los <strong>juegos indie</strong> y los <strong>juegos retro</strong>, este es tu espacio.
+            Exploramos las joyas ocultas del pasado y los nuevos títulos que están innovando el género. Descubre cómo
+            los <strong>juegos de mesa digitales</strong> y los <strong>juegos de cartas digitales</strong> están
+            ganando popularidad.</p>
+        <img src="./images/indie.jpeg" alt="Juegos Indie y Retro">
+
+        <h2>Diseño y Desarrollo de Videojuegos</h2>
+        <p>Para aquellos interesados en el <strong>desarrollo de videojuegos</strong>, ofrecemos recursos y consejos
+            sobre <strong>diseño de niveles</strong> y <strong>modding de videojuegos</strong>. Aprende de los mejores
+            en la industria y descubre cómo se crean los mundos que tanto amas explorar.</p>
+        <img src="./images/desarrollo.jpeg" alt="Diseño y Desarrollo de Videojuegos">
+
+        <h2>Música y Arte en Videojuegos</h2>
+        <p>La <strong>música de videojuegos</strong> y los <strong>gráficos de videojuegos</strong> son elementos
+            esenciales que enriquecen nuestra experiencia. Exploramos cómo la música y el arte contribuyen a la
+            inmersión en los mundos virtuales.
+            Desde los épicos soundtracks de videojuegos que acompañan nuestras aventuras hasta el arte conceptual que da
+            vida a los
+            personajes y entornos, descubre cómo estos aspectos influyen en nuestra percepción y disfrute de los
+            videojuegos.
+        </p>
+        <img src="./images/musica.jpeg" alt="Música y Arte en Videojuegos">
+        <h2>Juegos para Todos los Gustos</h2>
+        <p>Ya sea que prefieras los <strong>juegos de plataformas</strong>, los <strong>juegos de puzzles</strong>, los
+            <strong>juegos de construcción</strong>
+            o los
+            <strong>juegos educativos</strong>, aquí encontrarás algo que te encantará.
+            Exploramos una amplia variedad de géneros y
+            estilos
+            para satisfacer los gustos de todos los jugadores. Desde experiencias
+            relajantes hasta desafíos intensos,
+            hay un
+            juego esperándote.
+        </p>
+        <img src="./images/para-todos.jpeg" alt="Juegos para Todos los Gustos">
+        <h2>Únete a Nuestra Comunidad</h2>
+        <p>Invitamos a todos los <strong>gamers</strong> a unirse a nuestra comunidad, compartir sus experiencias y
+            participar en
+            discusiones
+            sobre sus juegos favoritos. Conéctate con otros jugadores apasionados, comparte consejos y trucos, y
+            mantente al
+            tanto de las últimas noticias y eventos en el mundo de los videojuegos. Juntos, podemos hacer de este blog
+            un lugar
+            vibrante y emocionante para todos los amantes de los videojuegos.</p>
+    </div>
+</body>
+
+</html>
