Mejorando las custom errors pages

--- a/custom-errrors/404.html
+++ b/custom-errrors/404.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="error">
-    <h3>Error 404 - Not Found</h3>
+    <img src="./images/404.png" alt="Error 404 - Not Found">
     <p>The requested URL was not found.</p>
 </body>
 </html>
