--- a/custom-errrors/403.html
+++ b/custom-errrors/403.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body class="error">
-    <h3>error 403 - forbidden</h3>
+    <img src="../images/403.jpeg" alt="">
     <p>You do not have permission to access this page.</p>
 </body>
 </html>
