Cambio de nombre

--- a/custom-errrors/403.html
+++ b/custom-errrors/403.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>error 403 - forbidden</title>
+    <title>Error 403 - forbidden</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body class="error">
-    <img src="../images/403.jpeg" alt="">
-    <p>You do not have permission to access this page.</p>
+    <img src="../images/403.jpeg" alt="Error 403 - Forbidden">
+    <p>Usted no tiene permiso para acceder a este sitio.</p>
 </body>
 </html>
